--- a/NarenderSingh/index.html
+++ b/NarenderSingh/index.html
@@ -9,27 +9,33 @@
   <title>Login</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" media="screen" href="main.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+
   <script src="main.js"></script>
 </head>
 <body>
-<img src="https://incubateind.com/images/IncubateIND%20Black.png" class="logo" alt="">
+<img src="https://incubateind.com/images/IncubateIND%20Black.png" class="logo" align="center" alt="">
   <!-- Beautify This -->
   <div class="log-form">
-    <h2>Enter your details</h2>
-    <form>
-      <input type="text" title="username" placeholder="username" />
-      <input type="email" title="email" placeholder="email">
-      <input type="password" title="password" placeholder="password" />
-      <input type="password" title="cnfpassword" placeholder="confirm password" />
+    <div class="container-xl p-3 my-3 bg-dark text-white">
+    <h2>Enter your details</h2></div>
+    <form  name="myform" onsubmit= "return validate()">
+      <input type="text" id="username" onsubmit="validate()" title="username" placeholder="username" />
+      <input type="email" id="email" onsubmit= "validate()" title="email" placeholder="email">
+      <input type="password" id="pswd1" title="password" placeholder="password" />
+      <input type="password" id="pswd2" onsubmit="validate()" title="cnfpassword" placeholder="confirm password" />
+      <input type="tel"  id="phone" title="phone" placeholder="Phone_No" />
       <textarea name="message" id="message" cols="35" rows="4" placeholder="enter message"></textarea>
       <p>Age</p>
       <input type="radio" id="above" name="age" value="above">
       <label for="above">Above 18</label>
       <input type="radio" id="below" name="age" value="below">
       <label for="below">Below 18</label>
-      <button type="submit" class="btn">Submit</button>
+      <br/>
+      <h3><button type="submit" align="center" class="btn" >Submit</button></h3>
     </form>
   </div>
   <!-- Beautify Ends -->
+
 </body>
 </html>
